fix sass-code formatting

--- a/layout/assets/sass/layout.scss
+++ b/layout/assets/sass/layout.scss
@@ -1,5 +1,4 @@
 /**********VARIABLES**********/
-
 $shark: #23282d;
 $white: #FFFFFF;
 $seagul: #75B3E2;
@@ -8,10 +7,7 @@ $foam: #F5FEFE;
 $gallery: #F0F0F0;
 $iron: #D7D8DB;
 $black-squeeze: #F5F9FC;
-
-
 /**********LAYOUT STYLES**********/
-
 .layout-container {
   width: 100%;
   background-color: $gallery;
@@ -30,15 +26,18 @@ $black-squeeze: #F5F9FC;
   border-bottom: 1px solid $iron;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
+
   .list-group-item {
     min-height: 50px;
     border-left: none;
     border-right: none;
     border-bottom: 1px solid $iron;
     padding: 0;
+
     &:first-child {
       border-top: none;
     }
+
     &:last-child {
       border-bottom: none;
     }
@@ -61,12 +60,14 @@ $black-squeeze: #F5F9FC;
   border-bottom: 1px solid $iron;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
+
   .new-load-sign {
     font-family: 'SFUIText-Bold', sans-serif;
     font-size: 20px;
     font-weight: 900;
     margin: 0 0 15px 10px;
   }
+
   .load-navigation-list {
     display: flex;
     flex-grow: 1;
@@ -74,17 +75,23 @@ $black-squeeze: #F5F9FC;
     padding-left: 0;
     margin-left: 5px;
     margin-bottom: 0;
+
     .load-navigation-item {
       display: inline-block;
       font-size: 13px;
       padding: 0 5px;
       text-align: center;
+
       .load-navigation-item-link {
         display: block;
         color: $shark;
-        &:hover, &:visited, &:link {
+
+        &:hover,
+        &:link,
+        &:visited {
           text-decoration: none;
         }
+
         &:active {
           text-decoration: none;
           font-weight: bold;
@@ -101,11 +108,13 @@ $black-squeeze: #F5F9FC;
 
 .smart-form {
   width: 100%;
+
   .form-group {
     position: relative;
     overflow: hidden;
     margin-bottom: 0;
     background-color: $white;
+
     .smart-input {
       box-shadow: none;
       border: none;
@@ -119,14 +128,17 @@ $black-squeeze: #F5F9FC;
       z-index: 1;
       padding: 8px 12px;
       outline: 0;
+
       &:valid {
         // Hides the label
         background: $white;
       }
+
       &:focus {
         padding-left: 25%;
         border-color: $seagul;
       }
+
       &:focus + .input-label {
         color: $seagul;
         margin-top: 7px;
@@ -139,6 +151,7 @@ $black-squeeze: #F5F9FC;
         justify-content: flex-end;
       }
     }
+
     .smart-input:focus + .input-label {
       left: 0;
       margin-right: 0;
@@ -146,6 +159,7 @@ $black-squeeze: #F5F9FC;
       padding-top: 5px;
       text-align: right;
     }
+
     .input-label {
       transition-duration: 0.1s;
       position: absolute;
@@ -169,6 +183,7 @@ $black-squeeze: #F5F9FC;
   align-items: center;
   padding: 0;
   color: $nobel;
+
   .left-static-sign {
     text-transform: uppercase;
     font-size: 10px;
@@ -178,6 +193,7 @@ $black-squeeze: #F5F9FC;
     text-align: right;
     padding: 0 15px;
   }
+
   .switch-button {
     width: 36.5%;
     height: inherit;
@@ -187,6 +203,7 @@ $black-squeeze: #F5F9FC;
     background-color: $white;
     outline: none;
   }
+
   .active-button {
     background: $seagul;
     color: $white;
@@ -199,6 +216,7 @@ $black-squeeze: #F5F9FC;
   align-items: center;
   padding: 0;
   color: $nobel;
+
   .left-static-sign {
     text-transform: uppercase;
     font-size: 10px;
@@ -208,23 +226,28 @@ $black-squeeze: #F5F9FC;
     text-align: right;
     padding: 0 15px;
   }
+
   .select-wrapper {
     width: 73%;
     position: relative;
     margin-bottom: 0;
+
     .glyphicon {
       position: absolute;
       z-index: 1;
       font-size: 10px;
     }
+
     .glyphicon-triangle-bottom {
       right: 15px;
       top: 50%;
     }
+
     .glyphicon-triangle-top {
       right: 15px;
       top: 35%;
     }
+
     .select-box {
       height: 50px;
       /*z-index: 2;*/
@@ -249,14 +272,17 @@ $black-squeeze: #F5F9FC;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .left-sign-panel {
       padding: 15px 0;
       text-transform: uppercase;
+
       .left-sign {
         display: inline-block;
         font-size: 12px;
         font-family: 'SFUIText-Medium', sans-serif;
       }
+
       .glyphicon-plus-minus {
         display: inline-block;
         color: $shark;
@@ -272,8 +298,10 @@ $black-squeeze: #F5F9FC;
     border: none;
     margin-bottom: 0;
     font-size: 10px;
+
     .pickups-table-header {
       text-transform: uppercase;
+
       .table-header-item {
         text-align: center;
         height: 50px;
@@ -284,26 +312,33 @@ $black-squeeze: #F5F9FC;
         font-family: 'SFUIText-Medium', sans-serif;
         font-weight: normal;
         color: $nobel;
+
         &:first-child {
           border-left: none;
         }
+
         &:last-child {
           border-right: none;
         }
       }
     }
+
     .pickups-table-body {
       .table-row {
         height: 50px;
+
         .table-data {
           vertical-align: middle;
           padding: 0;
+
           &:first-child {
             border-left: none;
           }
+
           &:last-child {
             border-right: none;
           }
+
           .table-input {
             height: 50px;
             box-shadow: none;
@@ -322,6 +357,7 @@ $black-squeeze: #F5F9FC;
 .textarea-block {
   .textarea-wrapper {
     margin-bottom: 0;
+
     .notes-textarea {
       padding: 15px;
       max-width: 100%;
@@ -341,6 +377,7 @@ $black-squeeze: #F5F9FC;
     border: none;
     margin-bottom: 0;
     height: 50px;
+
     .sign-panel {
       padding: 0 15px;
       font-size: 12px;
@@ -349,11 +386,11 @@ $black-squeeze: #F5F9FC;
     }
   }
 }
-
 /*****pickups styles need to be changed*****/
 .pickups-wrapper {
   .list-group-item {
     border-bottom: none;
+
     .smart-form {
       .smart-input {
         border: none;
@@ -370,9 +407,11 @@ $black-squeeze: #F5F9FC;
   /*position: relative;*/
   .relative-form {
     position: relative;
+
     .smart-input {
       border: none;
     }
+
     .unit {
       z-index: 10;
       position: absolute;
@@ -392,6 +431,7 @@ $black-squeeze: #F5F9FC;
   display: flex;
   align-items: center;
   padding: 0;
+
   .left-static-sign {
     text-transform: uppercase;
     font-size: 10px;
@@ -401,13 +441,19 @@ $black-squeeze: #F5F9FC;
     text-align: right;
     padding: 0 15px;
     color: $nobel;
+
     .calculate-link {
       color: $seagul;
-      &:hover, &:active, &:visited, &:link {
+
+      &:active,
+      &:hover,
+      &:link,
+      &:visited {
         text-decoration: none;
       }
     }
   }
+
   .unit {
     z-index: 10;
     position: absolute;
@@ -423,6 +469,7 @@ $black-squeeze: #F5F9FC;
   display: flex;
   align-items: center;
   padding: 0;
+
   .left-static-sign {
     text-transform: uppercase;
     font-size: 10px;
@@ -434,6 +481,7 @@ $black-squeeze: #F5F9FC;
     padding: 0 15px;
     color: $nobel;
   }
+
   .switch-button {
     width: 25%;
     height: 50px;
@@ -445,6 +493,7 @@ $black-squeeze: #F5F9FC;
     background-color: $white;
     outline: none;
   }
+
   .active-button {
     background: $seagul;
     color: $white;
@@ -455,6 +504,7 @@ $black-squeeze: #F5F9FC;
   display: flex;
   align-items: center;
   padding: 0;
+
   .left-static-sign {
     text-transform: uppercase;
     font-size: 10px;
@@ -466,15 +516,18 @@ $black-squeeze: #F5F9FC;
     padding: 0 15px;
     color: $nobel;
   }
+
   .dollar-sign {
     display: inline-block;
     width: 10%;
     text-align: center;
     font-size: 16px;
   }
+
   .simple-form {
     display: inline-block;
     width: 30%;
+
     .simple-input {
       height: 50px;
       border: none;
@@ -483,11 +536,13 @@ $black-squeeze: #F5F9FC;
       margin: 0;
     }
   }
+
   .rate-select-box {
     display: inline-block;
     width: 30%;
     border-left: 1px solid $nobel;
     position: relative;
+
     .rate-select {
       height: 50px;
       display: inline-block;
@@ -503,16 +558,19 @@ $black-squeeze: #F5F9FC;
         font-size: 16px;
       }
     }
+
     .glyphicon {
       position: absolute;
       z-index: 1;
       font-size: 10px;
       color: $nobel;
     }
+
     .glyphicon-triangle-bottom {
       right: 15px;
       top: 50%;
     }
+
     .glyphicon-triangle-top {
       right: 15px;
       top: 35%;
@@ -528,6 +586,7 @@ $black-squeeze: #F5F9FC;
   background-color: $foam;
   color: $nobel;
   position: relative;
+
   .left-static-sign {
     text-transform: uppercase;
     font-size: 10px;
@@ -539,18 +598,22 @@ $black-squeeze: #F5F9FC;
     padding: 0 15px;
     color: $nobel;
   }
+
   .dollar-sign {
     display: inline-block;
     width: 10%;
     text-align: center;
     font-size: 16px;
   }
+
   .total-sum-box {
     display: inline-block;
   }
+
   .per-mile-sum-box {
     display: inline-block;
   }
+
   .per-mile-sign {
     padding-right: 15px;
     display: inline-block;
@@ -565,6 +628,7 @@ $black-squeeze: #F5F9FC;
   height: 50px;
   display: flex;
   justify-content: space-between;
+
   .bottom-button {
     height: inherit;
     padding: 14px;
@@ -572,10 +636,11 @@ $black-squeeze: #F5F9FC;
     border: none;
     border-bottom: 1px solid $iron;
   }
+
   .btn-cancel {
     background-color: $gallery;
-
   }
+
   .btn-save {
     background-color: $seagul;
     color: $white;
