--- a/layout/assets/sass/base.scss
+++ b/layout/assets/sass/base.scss
@@ -1,48 +1,40 @@
 //colors
 $defaultGreyColor: #6c6c6c;
 $backgroundColor: #ccc;
-
 $logoLetterColor: #a4c2f4;
 $logoNumberColor: #ff9900;
-
 $menuActiveColor: #a4c2f4;
-
 $black-squeeze: #F5F9FC;
-
 //borders
 $defaultBorder: 2px solid $defaultGreyColor;
 $whiteBorder: 1px solid #fff;
-
-
 // fonts
-
 @font-face {
-  font-family: 'SFUIText-Bold';  src: ('../fonts/sf-bold.woff');
+	font-family: 'SFUIText-Bold';
+	src: ('../fonts/sf-bold.woff');
 }
-
 @font-face {
-  font-family: 'SFUIText-Medium';  src: ('../fonts/sf-medium.woff');
-}
-
-@font-face {
-  font-family: 'SFUIText-Regular';  src: ('../fonts/sf-regular.woff');
-}
-
-$logoFontFamily: Orbitron;
-$defaultFontSize:14px;
-
-
-body{
-	font-size:$defaultFontSize;
 	font-family: 'SFUIText-Medium';
-	background:$black-squeeze;
-	height:100%;
+	src: ('../fonts/sf-medium.woff');
+}
+@font-face {
+	font-family: 'SFUIText-Regular';
+	src: ('../fonts/sf-regular.woff');
+}
+$logoFontFamily: Orbitron;
+$defaultFontSize: 14px;
+
+body {
+	font-size: $defaultFontSize;
+	font-family: 'SFUIText-Medium';
+	background: $black-squeeze;
+	height: 100%;
 }
 
-input:focus{
-	outline:0;
+input:focus {
+	outline: 0;
 }
 
-.time-animation{
-	transition:all 0.5s
+.time-animation {
+	transition: all 0.5s;
 }
