refacroring with lint

--- a/src/app/drivers/messages/message/message.html
+++ b/src/app/drivers/messages/message/message.html
@@ -1,4 +1,5 @@
 <div class="message-container {{this.currentClassContainer}}">
   <div class="date">{{message.date}}</div>
   <div class="message {{this.currentClass}}">{{message.message}}</div>
+  <img src="url(http://static2.businessinsider.com/image/52164eddecad04ab7000000b/this-is-the-first-picture-of-earth-from-the-moon--taken-47-years-ago.jpg)">
 </div>
