--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,3 +10,13 @@ Home page
     [limit]="10"
 >
 </datatable>
+
+<bd-input 
+    placeholder="placeholder" 
+    [labelText]="'Estimated distance calculate'">
+</bd-input>
+<bd-input 
+    [attr.name]="'Andrew'">
+    <span md-prefix>$&nbsp;</span>
+</bd-input>
+
