FSPA-8 #comment change styles and position for users on chat

--- a/src/app/drivers/messages/message/message.scss
+++ b/src/app/drivers/messages/message/message.scss
@@ -31,21 +31,21 @@ $color-message: #000;
 	}
 }
 
-.message-carrier {
-	background: $color-carrier;
-
-	&:before {
-		right: -20px;
-		border-left: 20px solid $color-carrier;
-	}
-}
-
 .message-system {
 	background: $color-system;
 
 	&:before {
+		right: -20px;
+		border-left: 20px solid $color-system;
+	}
+}
+
+.message-carrier {
+	background: $color-carrier;
+
+	&:before {
 		left: -20px;
-		border-right: 20px solid $color-system;
+		border-right: 20px solid $color-carrier;
 	}
 }
 
@@ -67,18 +67,18 @@ $color-message: #000;
 	word-wrap: break-word;
 }
 
-.container-left {
+.container-right {
 	flex-direction: row;
 }
 
-.container-right {
+.container-left {
 	flex-direction: row-reverse;
 }
-/*.img {
+
+img {
+	width: 50px;
+	height: 50px;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	border-radius: 50%;
-	width: 50px;
-	height: 50px;
 }
-*/
