add validation to bd-input

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -1,10 +1,12 @@
-     <div class="bd-input {{_isFilled}}">
+     <div
+       class="bd-input {{_isFilled}}"
+     >
       <ng-content select="[md-prefix]"></ng-content>
-      <input 
-        name="bd-input-element" 
-        type="text" 
+      <input
+        name="bd-input-element"
+        type="text"
         [(ngModel)]="value"
-        [disabled]="disabled" 
+        [disabled]="disabled"
         [attr.maxlength]="maxlength"
         (focus)="_handleFocus($event)"
         placeholder="placeholder"
@@ -12,19 +14,18 @@
         (blur)="_handleBlur($event)"
         [attr.name]="name"
         [type]="type"
-        class="form-control bd-input-element" 
+        class="form-control bd-input-element {{_invalidClass}}"
         id="customer-input-id"
         autocomplete="off"
       >
-      <label 
-        class="bd-input-placeholder" 
+      <div
+        *ngIf="_isInvalid && !_empty"
+        class="error-message"
+        [innerHTML]="errorText">
+      </div>
+      <label
+        class="bd-input-placeholder {{_invalidClass}}"
         for="smart-input"
         [innerHTML]="labelText">
       </label>
       </div>
-
-      
-
-
-
-   
