--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@ Home page
     placeholder="placeholder"
     [labelText]="'Estimated distance calculate'"
     [errorText]="'test error'"
-    [invalid]="true"
+    [invalid]="false"
     >
 </bd-input>
 <bd-input
