--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -44,7 +44,7 @@ $error: #fb3a3a;
             opacity:  1;
           }
       }
-      &:focus + .bd-input-placeholder {
+      &:focus + .addAnimation {
         color: $seagul;
         margin-top: 7px;
         z-index: 2;
