--- a/src/app/drivers/messages/message/message.html
+++ b/src/app/drivers/messages/message/message.html
@@ -2,5 +2,5 @@
   <div class="date">{{message.date}}</div>
   <div class="message {{this.currentClass}}">{{message.message}}
   </div>
-  <img src="http://static2.businessinsider.com/image/52164eddecad04ab7000000b/this-is-the-first-picture-of-earth-from-the-moon--taken-47-years-ago.jpg">
+  <img src="{{message.img}}">
 </div>
