FSPA-84 #comment added prefix after label to static inp

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -1,7 +1,7 @@
      <div
        class="bd-input {{_isFilled}}"
      >
-      <ng-content select="[md-prefix]"></ng-content>
+      <span class="prefix"><ng-content select="[md-prefix]"></ng-content></span>
       <input
         name="bd-input-element"
         type="text"
@@ -28,5 +28,4 @@
         for="smart-input"
         [innerHTML]="labelText">
       </label>
-       <ng-content select="[md-suffix]"></ng-content>
       </div>
