--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@ Home page
 >
 </datatable>
 
-
+<div style="width:500px">
 <bd-input
     [animated]="true"
     placeholder="placeholder"
@@ -23,6 +23,6 @@ Home page
 <bd-input
     [labelText]="'Estimated'"
     [attr.name]="'Andrew'">
-    <span md-prefix>$&nbsp;</span>
-    <span md-suffix>.00</span>
+    <span class="prefix" md-prefix>$&nbsp;</span>
 </bd-input>
+</div>
