--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,7 @@ Home page
     [errorText]="'test error'"
     [invalid]="false"
     >
+    <span md-prefix>$&nbsp;</span>
 </bd-input>
 <bd-input
     [labelText]="'Estimated'"
