--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,6 +23,7 @@ Home page
 </bd-input>
 <bd-input
     [labelText]="'Estimated'"
+    [invalid]="true"
     [attr.name]="'Andrew'">
     <span class="prefix" md-prefix>$&nbsp;</span>
 </bd-input>
