--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,20 +11,27 @@ Home page
 >
 </datatable>
 
-<div style="width:500px">
+<div style="width:500px; margin-top:100px;">
 <bd-input
-    [animated]="true"
     placeholder="placeholder"
     [labelText]="'Estimated distance calculate'"
     [errorText]="'test error'"
     [invalid]="false"
     >
-    <span md-prefix>$&nbsp;</span>
 </bd-input>
 <bd-input
     [labelText]="'Estimated'"
     [invalid]="true"
+    [errorText]="'test error'"
     [attr.name]="'Andrew'">
     <span class="prefix" md-prefix>$&nbsp;</span>
 </bd-input>
+
+<bd-input
+    [labelText]="'Estimated'"
+    [defaultView]="false"
+    [attr.name]="'Andrew'">
+    <span class="prefix" md-prefix>$&nbsp;</span>
+</bd-input>
+
 </div>
