FSPA-84 #comment Added keypress event, removed lint err from home component, fixed static input functionality

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -22,6 +22,7 @@
               (focus)="_handleFocus($event)"
               placeholder="placeholder"
               (change)="_handleChange($event)"
+              (keypress)="_handleKeyPress($event)"
               (blur)="_handleBlur($event)"
               [attr.name]="name"
               [type]="type"
