--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -169,4 +169,10 @@ $error-background: rgba(251,58,58,0.2);
       }
     }
   }
+  &.bd-static-focused {
+    border-bottom-color: $seagul;
+    .bd-label {
+      color: $seagul;
+    }
+  }
 }
