--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,8 @@ Home page
 <div style="width:500px; margin-top:100px;">
 <bd-input
     placeholder="placeholder"
+    [defaultView]="false"
+    [animated]="true"
     [labelText]="'Estimated distance calculate'"
     [errorText]="'test error'"
     [invalid]="false"
@@ -22,6 +24,7 @@ Home page
 <bd-input
     [labelText]="'Estimated'"
     [invalid]="true"
+    [defaultView]="false"
     [errorText]="'test error'"
     [attr.name]="'Andrew'">
     <span class="prefix" md-prefix>$&nbsp;</span>
@@ -29,7 +32,7 @@ Home page
 
 <bd-input
     [labelText]="'Estimated'"
-    [defaultView]="false"
+    [defaultView]="true"
     [attr.name]="'Andrew'">
     <span class="prefix" md-prefix>$&nbsp;</span>
 </bd-input>
